# shaderwork

./: CMakeLists.txt
UpworkShaders/: App.cpp  App.h  Camera.cpp  Camera.h  Main.cpp  Mesh.cpp  Mesh.h  Node.cpp  Node.h  PointLight.cpp  PointLight.h  QuadMesh.cpp  QuadMesh.h  Renderer.cpp  Renderer.h  SceneLoader.cpp  SceneLoader.h  Settings.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TexturedMesh.cpp  TexturedMesh.h
UpworkShaders/res/models/: suzanne.fbx  unit_cube.fbx  unit_quad.fbx
UpworkShaders/res/shaders/: cartoon.frag  cel.frag  default.frag  default.vert  depth.vert  mirror.frag  mirror.vert  normals.frag  normals.vert  ui.frag  ui.vert
